--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
         "kartik-v/yii2-export": "dev-master",
         "yiisoft/yii2-jui": "~2.0.0",
         "kartik-v/yii2-date-range": "dev-master",
-        "fedemotta/yii2-cronjob": "*"
+        "fedemotta/yii2-cronjob": "*",
+        "kartik-v/yii2-widget-fileinput": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.1.0",
         "yiisoft/yii2-faker": "~2.0.0",
-
         "codeception/base": "~2.3.0",
         "codeception/verify": "~0.4.0",
         "codeception/specify": "~0.4.6",
